libs/image/kis_strokes_queue.cpp
@@ -47,8 +47,8 @@ struct Q_DECL_HIDDEN KisStrokesQueue::Private {
     int nextDesiredLevelOfDetail;
     QMutex mutex;
     KisLodSyncStrokeStrategyFactory lod0ToNStrokeStrategyFactory;
-    KisStrokeStrategyFactory suspendUpdatesStrokeStrategyFactory;
-    KisStrokeStrategyFactory resumeUpdatesStrokeStrategyFactory;
+    KisSuspendResumeStrategyFactory suspendUpdatesStrokeStrategyFactory;
+    KisSuspendResumeStrategyFactory resumeUpdatesStrokeStrategyFactory;
 
     void cancelForgettableStrokes();
     void startLod0ToNStroke(int levelOfDetail, bool forgettable);
@@ -77,6 +77,23 @@ KisStrokesQueue::~KisStrokesQueue()
     delete m_d;
 }
 
+template <class StrokePair, class StrokesQueue>
+typename StrokesQueue::iterator
+executeStrokePair(const StrokePair &pair, StrokesQueue &queue, typename StrokesQueue::iterator it, KisStroke::Type type, int levelOfDetail) {
+    KisStrokeStrategy *strategy = pair.first;
+    QList<KisStrokeJobData*> jobsData = pair.second;
+
+    KisStrokeSP stroke(new KisStroke(strategy, type, levelOfDetail));
+    strategy->setCancelStrokeId(stroke);
+    it = queue.insert(it, stroke);
+    Q_FOREACH (KisStrokeJobData *jobData, jobsData) {
+        stroke->addJob(jobData);
+    }
+    stroke->endStroke();
+
+    return it;
+}
+
 void KisStrokesQueue::Private::startLod0ToNStroke(int levelOfDetail, bool forgettable)
 {
     // precondition: lock held!
@@ -86,16 +103,8 @@ void KisStrokesQueue::Private::startLod0ToNStroke(int levelOfDetail, bool forget
     if (!this->lod0ToNStrokeStrategyFactory) return;
 
     KisLodSyncPair syncPair = this->lod0ToNStrokeStrategyFactory(forgettable);
-    KisStrokeStrategy *lod0ToN = syncPair.first;
-    QList<KisStrokeJobData*> jobsData = syncPair.second;
+    executeStrokePair(syncPair, this->strokesQueue, this->strokesQueue.end(),  KisStroke::LODN, levelOfDetail);
 
-    KisStrokeSP sync(new KisStroke(lod0ToN, KisStroke::LODN, levelOfDetail));
-    lod0ToN->setCancelStrokeId(sync);
-    this->strokesQueue.enqueue(sync);
-    Q_FOREACH (KisStrokeJobData *jobData, jobsData) {
-        sync->addJob(jobData);
-    }
-    sync->endStroke();
     this->lodNNeedsSynchronization = false;
 }
 
@@ -205,25 +214,15 @@ KisStrokeId KisStrokesQueue::startStroke(KisStrokeStrategy *strokeStrategy)
         m_d->strokesQueue.insert(m_d->findNewLodNPos(buddy), buddy);
 
         if (m_d->shouldWrapInSuspendUpdatesStroke()) {
-            KisStrokeStrategy *strategy;
 
-            strategy = m_d->suspendUpdatesStrokeStrategyFactory();
-            KisStrokeSP suspend(new KisStroke(strategy, KisStroke::SUSPEND, 0));
-            strategy->setCancelStrokeId(suspend);
-
-            strategy = m_d->resumeUpdatesStrokeStrategyFactory();
-            KisStrokeSP resume(new KisStroke(strategy, KisStroke::RESUME, 0));
-            strategy->setCancelStrokeId(resume);
+            KisSuspendResumePair suspendPair = m_d->suspendUpdatesStrokeStrategyFactory();
+            KisSuspendResumePair resumePair = m_d->resumeUpdatesStrokeStrategyFactory();
 
             StrokesQueueIterator it = m_d->findNewLod0Pos();
 
-            it = m_d->strokesQueue.insert(it, resume);
-            resume->endStroke();
-
+            it = executeStrokePair(resumePair, m_d->strokesQueue, it, KisStroke::RESUME, 0);
             it = m_d->strokesQueue.insert(it, stroke);
-
-            it = m_d->strokesQueue.insert(it, suspend);
-            suspend->endStroke();
+            it = executeStrokePair(suspendPair, m_d->strokesQueue, it, KisStroke::SUSPEND, 0);
 
         } else {
             m_d->strokesQueue.insert(m_d->findNewLod0Pos(), stroke);
@@ -438,12 +437,12 @@ void KisStrokesQueue::setLod0ToNStrokeStrategyFactory(const KisLodSyncStrokeStra
     m_d->lod0ToNStrokeStrategyFactory = factory;
 }
 
-void KisStrokesQueue::setSuspendUpdatesStrokeStrategyFactory(const KisStrokeStrategyFactory &factory)
+void KisStrokesQueue::setSuspendUpdatesStrokeStrategyFactory(const KisSuspendResumeStrategyFactory &factory)
 {
     m_d->suspendUpdatesStrokeStrategyFactory = factory;
 }
 
-void KisStrokesQueue::setResumeUpdatesStrokeStrategyFactory(const KisStrokeStrategyFactory &factory)
+void KisStrokesQueue::setResumeUpdatesStrokeStrategyFactory(const KisSuspendResumeStrategyFactory &factory)
 {
     m_d->resumeUpdatesStrokeStrategyFactory = factory;
 }
