libs/image/kis_suspend_projection_updates_stroke_strategy.h
@@ -29,11 +29,14 @@ public:
     KisSuspendProjectionUpdatesStrokeStrategy(KisImageWSP image, bool suspend);
     ~KisSuspendProjectionUpdatesStrokeStrategy();
 
+    static QList<KisStrokeJobData*> createSuspendJobsData(KisImageWSP image);
+    static QList<KisStrokeJobData*> createResumeJobsData(KisImageWSP image);
+
 private:
-    void finishStrokeCallback();
+    void doStrokeCallback(KisStrokeJobData *data);
     void cancelStrokeCallback();
 
-    void finishStrokeCallbackImpl(bool dropUpdates);
+    void resumeAndIssueUpdates(bool dropUpdates);
 
 private:
     struct Private;
